# Nebula

./: .gitignore  .mcp.json  README.md  Readme.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml
apps/landing/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/landing/src/: App.tsx  index.css  main.tsx
apps/landing/src/lib/: device.ts  glow.ts  story.ts  theme-cookie.ts  theme.ts
apps/landing/src/scene/: Agent.tsx  AlleyWalls.tsx  Atmosphere.tsx  BackgroundAgents.tsx  BurstFX.tsx  CameraRig.tsx  Effects.tsx  Elder.tsx  Experience.tsx  Ground.tsx  NebulaBackdrop.tsx  PowerOrbs.tsx  SceneEnvironment.tsx  StoryDriver.tsx
apps/landing/src/ui/: Features.tsx  FinalCTA.tsx  Footer.tsx  HowItWorks.tsx  Nav.tsx  (+5 more)
apps/nebula-hub/: .env.example  .gitignore  next.config.ts  package.json
apps/nebula-hub/prisma/: schema.prisma
apps/nebula-hub/src/: middleware.ts
apps/nebula-hub/supabase/: hub.sql  waitlist.sql
apps/web/: .gitignore  next.config.ts  package.json  vercel.json
apps/web/src/: middleware.ts  styles.css
apps/web/supabase/: waitlist.sql
contracts/policy/: Cargo.toml  README.md
contracts/policy/contracts/nebula-policy/: Cargo.toml
contracts/policy/contracts/nebula-policy/src/: lib.rs  limits.rs  test.rs
contracts/policy/scripts/: testnet-deploy-and-test.sh
docs/: ARCHITECTURE.md  MCP-DEV.md  STRUCTURE.md  SUPABASE.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: styles.css
frontend/src/routes/: __root.tsx  index.tsx
scripts/: configure-vercel.mjs
(+225 files in other folders)
