[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
# 26.x testutils currently break on ed25519-dalek 3 / rand_core mismatch in this env.
# 22 tracks protocol compatible enough for unit tests + testnet deploy via stellar-cli.
soroban-sdk = "22.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
